# Feynman_PSO

./: main.py  pyproject.toml
Classes/: PSO.py
Errors/: InvalidArraySize.py
core/: optmizer.py  particle.py  swarm.py
feynman_pso/: __init__.py  pso.py
utils/: boundary_conditions.py  stochastic_math.py
